<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@string/left_menu_explain"
            android:padding="8dp"
            android:src="@drawable/top_back" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="足浴通商家"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="@drawable/wb_personal_item_full_normal"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <com.jky.lavipeditum.custom_view.ClearEditText
                        android:id="@+id/cet_username"
                        android:layout_width="@dimen/login_editview_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@null"
                        android:hint="管理员账号/门店账号"
                        android:inputType="text"
                        android:lines="1"
                        android:singleLine="true"
                        android:textColor="@color/main_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/iv_line"
                        style="@style/login_editview"
                        android:layout_toLeftOf="@id/cet_username"
                        android:layout_toStartOf="@id/cet_username"
                        android:contentDescription="@null"
                        android:src="@drawable/wb_infolist_tab_divider_small_version" />

                    <TextView
                        style="@style/login_editview"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/iv_line"
                        android:layout_toStartOf="@id/iv_line"
                        android:text="账 号"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dip"
                    android:background="@color/login_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <com.jky.lavipeditum.custom_view.ClearEditText
                        android:id="@+id/cet_pwd"
                        android:layout_width="@dimen/login_editview_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@null"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true"
                        android:textColor="@color/main_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/iv_psw_line"
                        style="@style/login_editview"
                        android:layout_toLeftOf="@id/cet_pwd"
                        android:layout_toStartOf="@id/cet_pwd"
                        android:contentDescription="@null"
                        android:src="@drawable/wb_infolist_tab_divider_small_version" />

                    <TextView
                        style="@style/login_editview"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/iv_psw_line"
                        android:layout_toStartOf="@id/iv_psw_line"
                        android:text="@string/password"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/ck_remember_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/login_remember_pwd"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/ck_remember_pwd"
                    android:layout_toRightOf="@id/ck_remember_pwd"
                    android:text="@string/login_remember_pwd"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/login_forget_pwd"
                    android:textColor="@color/main_color"
                    android:textSize="16sp" />
            </RelativeLayout>

            <com.jky.lavipeditum.custom_view.BootstrapButton
                android:id="@+id/bb_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/logint_title_hint"
                android:textSize="16sp"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_size="default"
                bootstrapbutton:bb_text_gravity="center"
                bootstrapbutton:bb_type="primary" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>